# sap2k

./: LICENSE  MANIFEST.in  README.md  setup.cfg
sap2k/: __init__.py  initialize.py
sap2k/constants/: __init__.py
sap2k/outputs/: frame_output.py  shell_output.py
src/: Initialize.py
src/constants/: sap_paths.json  units.json
src/outputs/: Frame_Output.py  Shell_Output.py
src/sap2k/: __init__.py  initialize.py
src/sap2k/definitions/: load_patterns.py
src/sap2k/design/: steel.py
src/sap2k/functions/: helpers.py
src/sap2k/outputs/: Frame_Output.py  frame_output.py  joint_output.py  shell_output.py  structure_output.py
tests/: initialize_tests.py  test_areashells.py  test_definitions.py
