[metadata]
name = sap2k-AFortier
version = 0.0.2
author = Aaron Fortier
author_email = aaron.j.fortier@gmail.com
description = This package interfaces with CSI SAP2000's through it's published OAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajfortie/sap2k
project_urls =
    Bug Tracker = https://github.com/ajfortie/sap2k/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
