[metadata]
name = sap2k-AFortier
version = 0.0.30
author = Aaron Fortier
author_email = aaron.j.fortier@gmail.com
description = This package interfaces with CSI SAP2000's through it's published OAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajfortie/sap2k
project_urls =
    Bug Tracker = https://github.com/ajfortie/sap2k/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src

python_requires = >=3.10
include_package_data = True
install_requires =
    comtypes

[options.packages.find]
where = src
